update boilerplate to have status route by default
