# src/routes/statusRoutes.ts
@@ -1,0 +1,6 @@
+import { Router } from "express";
+import { checkServiceStatus } from "../controllers/statusController";
+
+export const statusRouter = Router();
+
+statusRouter.get("/", checkServiceStatus);
